@@ -1,6 +1,11 @@
 2007-11-21  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
+	Don't create dest dir on merges
+	
+2007-11-21  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
 	Handle recursive copies
 
 2007-11-20  Alexander Larsson  <alexl@redhat.com>
